# BlackJack

./: CMakeLists.txt  main.cpp  main.qml
ConnectionManager/: CMakeLists.txt
ConnectionManager/Interface/: connection.cpp  connection.h
ConnectionManager/MainWindowConnection/: mwcreatorconnection.cpp  mwcreatorconnection.h
ConnectionManager/Manager/: connectionmanager.cpp  connectionmanager.h
GloabalData/: data.h
GlobalData/: data.cpp  data.h
Layout/: CMakeLists.txt  GridLayoutUtil.qml
MainWindow/: main.qml  mainwindow.cpp  mainwindow.h
Managers/: windowsmanagers.cpp  windowsmanagers.h
Modules/SpecificLayout/: CMakeLists.txt
WindowsManager/: CMakeLists.txt  windowsmanager.cpp  windowsmanager.h
